--- a/django_blog/requirements.txt
+++ b/django_blog/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==3.0.1
 Django==5.2.5
 django-csp==4.0
 django-filter==25.1
+django-taggit==6.1.0
 djangorestframework==3.16.1
 packaging==25.0
 python-decouple==3.8
